# chops

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/engine/: Engine.cpp  Engine.h  Playback.h  RealtimeSwap.h  Voice.cpp  Voice.h
src/model/: Document.h  Edits.cpp  Edits.h
src/state/: State.cpp  State.h
src/ui/: Knobs.h  PadStrip.h  PeakCache.h  SliceLane.cpp  SliceLane.h  WaveDisplay.cpp  WaveDisplay.h  WaveRender.h
tests/: EngineTests.cpp
